# ppf-registration-spatial-hashing

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  PPF.ipynb  Untitled.ipynb  alignment_py.cpp  build_docker.sh  configure.sh  run_docker.sh  run_jupyter.sh  setup.py
include/: ppf.h  scene.h
include/impl/: util.hpp
src/: alignment.cpp  alignment_py.cpp  transformation_clustering.cpp
src/cuda/: ppf.cu
